tests/extensions/enhanced_assignments/semanticErr/badIdentPlus.wacc
begin
    i += 100
end